Prepared code for split of back testing and live trading
- TODO shared cache
- TODO parallelized independent indicator calculation